--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,8 @@
         "useDefineForClassFields": false,
         "lib": ["ES2022", "dom"],
         "paths": {
+            "@app/*": ["src/app/*"],
+            "@components/*": ["src/app/components/*"],
             "@store/*": ["src/app/store/*"]
         }
     },
