Add new path alias for the models

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
         "paths": {
             "@app/*": ["src/app/*"],
             "@components/*": ["src/app/components/*"],
+            "@models/*": ["src/app/models/*"],
             "@store/*": ["src/app/store/*"]
         }
     },
