--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
             "@app/*": ["src/app/*"],
             "@components/*": ["src/app/components/*"],
             "@models/*": ["src/app/models/*"],
-            "@store/*": ["src/app/store/*"]
+            "@store/*": ["src/app/store/*"],
+            "@shared/*": ["src/app/shared/*"]
         }
     },
     "angularCompilerOptions": {
